--- a/readme.org
+++ b/readme.org
@@ -1,14 +1,15 @@
 #+PROPERTY: header-args:R :async :results output verbatim  :exports both  :session *R* :cache no
 #+Title: The state learner
 
-This repository provides code that implements the state learner. We provide
-examples of how to use it as a stand-alone tool and in combination with targeted
-learning. We also provide code to reproduce the numerical experiments described
-in the article "The state learner -- a super learner for right-censored data"
-(Munch & Gerds). Details are given in [[./experiments/readme-experiments.org]]. The
-article also described a real data example. As we cannot share the data from
-that study, the tutorial below uses a publicly available data set provided by
-the =riskRegression= package.
+This repository provides code that implements the state learner which is a super
+learner for right-censored data. We provide examples of how to use it as a
+stand-alone tool and in combination with targeted learning. We also provide code
+to reproduce the numerical experiments described in the article "The state
+learner -- a super learner for right-censored data" (Munch & Gerds). Details are
+given in [[./experiments/readme-experiments.org]]. The article also describes a real
+data example, but as we cannot share the data from that study, the tutorial
+below uses a publicly available data set provided by the =riskRegression=
+package.
 
 To run the examples below, first run the following code to load the needed
 functions.
@@ -54,22 +55,23 @@ entries to the list (e.g., =ntree= for a random survival forest).
   learners <- list(
     cox = list(model = "cox", x_form = ~sex+age+logthick),
     cox_penalty = list(model = "GLMnet", x_form = ~invasion+ici+epicel+ulcer+sex+age+logthick),
-    km = list(model = "cox", x_form = ~1),
-    km_strat = list(model = "cox", x_form = ~strata(epicel)),
+    N_Aa = list(model = "cox", x_form = ~1),
+    N_Aa_strat = list(model = "cox", x_form = ~strata(epicel)),
     rf = list(model = "rfsrc", x_form = ~invasion+ici+epicel+ulcer+sex+age+logthick, ntree = 50)
   )
 #+END_SRC
 
 #+RESULTS:
-: Loading required package: Matrix
-: Loaded glmnet 4.1-8
 
 Below we use the same list of learners to learn the cumulative hazards for cause
-1, cause 2, and censoring. The state learner returns a =list= consisting of 1) a
-=data.table= of triples of learners sorted according to their joint performance
-in predicting the state of the observed data in the interval 0 to =time=, and 2)
-the top ranked triple of models fitted to the full data. Here we use an interval
-of 5 years and show the 6 highest ranked triples.
+1, cause 2, and censoring. The state learner returns a =list= consisting of
+
+1) a =data.table= of triples of learners sorted according to their joint
+   performance in predicting the state of the observed data in the interval 0 to
+   =time=;
+2) the top ranked triple of models fitted to the full data.
+
+Here we use an interval of 5 years and show the 6 highest ranked triples.
 #+BEGIN_SRC R :exports both
   set.seed(111)
   sl = statelearner(learners = list(cause1 = learners,
@@ -84,11 +86,11 @@ of 5 years and show the 6 highest ranked triples.
 : Key: <loss>
 :    cause1      cause2      censor     loss     b
 :    <fctr>      <fctr>      <fctr>    <num> <int>
-: 1:     rf          km         cox 239.6142     1
-: 2:     rf          km cox_penalty 239.8218     1
-: 3:     rf          km          km 239.8678     1
+: 1:     rf        N_Aa         cox 239.6142     1
+: 2:     rf        N_Aa cox_penalty 239.8218     1
+: 3:     rf        N_Aa        N_Aa 239.8678     1
 : 4:     rf cox_penalty         cox 239.9478     1
-: 5:     rf          km          rf 239.9732     1
+: 5:     rf        N_Aa          rf 239.9732     1
 : 6:     rf cox_penalty cox_penalty 240.1687     1
 
 ** Use for targeted estimation
